# redis_project

./: docker-compose.yml  dockerfile  pyproject.toml
src/: main.py
src/apps/feature_app/: applcation.py  collection.py  container.py  domain.py  infrastructure.py
src/config/settings/: __init__.py  base.py  logging.py  redis.py
src/dispather/: __init__.py  dispatcher.py  exceptions.py
